# SpotiSeek

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
scripts/: build_executable.py  spotiseek_app.py
spotiseek/: __init__.py  __main__.py  cli.py  config.py  downloader.py  errors.py  gui.py  logging_setup.py  models.py  tagging.py  version.py
spotiseek/assets/: README.md
spotiseek/fallback/: __init__.py  odesli.py  providers.py  source.py
spotiseek/soulseek/: __init__.py  client.py  matcher.py
spotiseek/spotify/: __init__.py  base.py  embed.py  parser.py  provider.py  web_api.py
tests/: conftest.py
tests/fixtures/: embed_album.html  embed_playlist.html  embed_track.html  odesli_track.json
tests/fixtures/audio/: sample.flac  sample.m4a
tests/integration/: test_end_to_end.py  test_fallback_live.py  test_soulseek_live.py  test_spotify_live.py
tests/unit/: test_config.py  test_downloader.py  test_embed_provider.py  test_fallback.py  test_gui.py  test_matcher.py  test_models.py  test_soulseek_client.py  test_spotify_parser.py  test_tagging.py  test_version.py
