[project]
name = "spotiseek"
version = "0.1.0"
description = "Read a Spotify URL (track/album/playlist) and download the tracks from Soulseek."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "aioslsk>=1.6.0",
    "spotipy>=2.24.0",
    "mutagen>=1.47.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.9.0",
    "requests>=2.32.0",
]

[project.scripts]
spotiseek = "spotiseek.cli:main"

[project.optional-dependencies]
# For pip users: `pip install -e ".[dev]"`.
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

# For uv users: this group is installed by default, so `uv run pytest` works
# without extra flags and isn't pruned by plain `uv run` invocations.
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spotiseek"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit the live Spotify/Soulseek network (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["spotiseek"]
