[project]
name = "spotiseek"
version = "0.1.0"
description = "Read a Spotify URL (track/album/playlist) and download the tracks from Soulseek."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Multimedia :: Sound/Audio",
]
# Upper bounds cap each dependency below its next major version: SpotiSeek is an
# application (not a library), so pinning the major protects CI/users from a
# breaking auto-upgrade. Bump the ceiling deliberately when adopting a new major.
dependencies = [
    "aioslsk>=1.6.0,<2.0.0",
    "spotipy>=2.24.0,<3.0.0",
    "mutagen>=1.47.0,<2.0.0",
    "click>=8.1.0,<9.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "rapidfuzz>=3.9.0,<4.0.0",
    "requests>=2.32.0,<3.0.0",
]

[project.scripts]
spotiseek = "spotiseek.cli:main"
spotiseek-gui = "spotiseek.cli:gui"

[project.optional-dependencies]
# Desktop GUI (PySide6 is large, so it's opt-in): `pip install spotiseek[gui]`.
gui = ["pyside6>=6.7.0,<7.0.0"]
# For pip users: `pip install -e ".[dev]"`.
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

# For uv users: this group is installed by default, so `uv run pytest` works
# without extra flags and isn't pruned by plain `uv run` invocations. PySide6 is
# included here so the GUI smoke test can run.
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pyside6>=6.7.0,<7.0.0",
]
# Tools for building the standalone executables (used by CI and
# scripts/build_executable.py). Not installed by default.
build = [
    "pyinstaller>=6.11.0,<7.0.0",
    "pillow>=10.0.0,<12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spotiseek"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit the live Spotify/Soulseek network (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["spotiseek"]
